--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node -r tsconfig-paths/register src/index.ts",
+    "start:dev": "npx ts-node -r tsconfig-paths/register src/index.ts",
+    "start": "node dist/index.js",
+    "build": "npx tsc && npx tsc-alias",
     "test": "echo \"Error: no test specified\" && exit 1",
     "type-gen": "graphql-codegen --config codegen.yml"
   },
@@ -17,6 +19,7 @@
     "@types/node": "^16.0.0",
     "nodemon": "^2.0.9",
     "ts-node": "^10.0.0",
+    "tsc-alias": "^1.3.7",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
