--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start:dev": "npx ts-node -r tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js",
     "build": "npx tsc && npx tsc-alias",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migration:run": "npm run typeorm migration:run",
+    "migration:revert": "npm run typeorm migration:revert",
     "test": "echo \"Error: no test specified\" && exit 1",
     "type-gen": "graphql-codegen --config codegen.yml"
   },
@@ -27,7 +30,9 @@
     "apollo-server": "^2.25.2",
     "class-validator": "^0.13.1",
     "graphql": "^15.5.1",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.34"
   }
 }
