--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alumni",
+  "name": "ee-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,8 @@
     "migration:run": "npm run typeorm migration:run",
     "migration:revert": "npm run typeorm migration:revert",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "type-gen": "graphql-codegen --config codegen.yml"
+    "lint": "npx tslint -p tsconfig.json",
+    "lint:fix": "npx tslint -p tsconfig.json --fix"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,13 @@
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.0.0",
     "nodemon": "^2.0.9",
+    "prettier": "^2.3.2",
     "ts-node": "^10.0.0",
     "tsc-alias": "^1.3.7",
     "tsconfig-paths": "^3.10.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
