--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prepare": "husky install",
     "start:dev": "npx ts-node -r tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js",
     "build": "npx tsc && npx tsc-alias",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:run": "npm run typeorm migration:run",
     "migration:revert": "npm run typeorm migration:revert",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "lint": "npx tslint -p tsconfig.json",
     "lint:fix": "npx tslint -p tsconfig.json --fix"
   },
@@ -21,6 +22,9 @@
     "@types/express": "github:types/express",
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.0.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^7.0.1",
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2",
     "ts-node": "^10.0.0",
@@ -39,5 +43,10 @@
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.34"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
