--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "start:dev": "npx ts-node -r tsconfig-paths/register src/index.ts",
+    "start:dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js",
-    "build": "npx tsc && npx tsc-alias",
+    "build": "tsc &&npx tsc-alias",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:run": "npm run typeorm migration:run",
     "migration:revert": "npm run typeorm migration:revert",
     "test": "echo \"Error: no test specified\"",
-    "lint": "npx tslint -p tsconfig.json",
-    "lint:fix": "npx tslint -p tsconfig.json --fix"
+    "lint": "tslint -p tsconfig.json",
+    "lint:fix": "tslint -p tsconfig.json --fix"
   },
   "keywords": [],
   "author": "",
