--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "github:types/express",
+    "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.0.0",
     "commitizen": "^4.2.4",
@@ -37,7 +37,9 @@
   },
   "dependencies": {
     "apollo-server": "^2.25.2",
+    "apollo-server-express": "^3.1.2",
     "class-validator": "^0.13.1",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
